# nbFFmpeg

./: .gitmodules  CMakeLists.txt  EncodeNode.cpp  EncodeNode.h  README.md  RecordNode.cpp  RecordNode.h  Tools.h  main.cpp  nbFFmpeg.cpp  nbFFmpeg.h  types.h
